<resources>
    <string name="app_name">Calculator</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="AC">AC</string>
    <string name="display_hint">0</string>
    <string name="dot_btn">.</string>
    <string name="sin_btn_text">sin</string>
    <string name="cos_btn_text">cos</string>
    <string name="tan_btn_text">tan</string>
    <string name="log_btn_text">log</string>
    <string name="pie_btn_text">&#960;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sinh_btn_text">sinh</string>
    <string name="cosh_btn_text">cosh</string>
    <string name="tanh_btn_text">tanh</string>
    <string name="square_btn_text">x <small><sup>2</sup> </small></string>
    <string name="cube_btn_text">x <small><sup>3</sup> </small></string>
    <string name="exponential_to_power_btn_text">e <small><sup>x</sup> </small></string>
    <string name="ten_to_power_btn_text">10 <small><sup>x</sup></small></string>
    <string name="inverse_of_one_btn_text">inv</string>
    <string name="square_root_btn_text"> <small><sup>2√</sup></small>x</string>
    <string name="cube_root_btn_text"><small><sup>3√</sup></small>x</string>
    <string name="nth_root_btn_text">√</string>
    <string name="permutation_btn_text">x!</string>
    <string name="rand_num_btn_text">rand</string>
    <string name="two_to_power_btn_text">2<small><sup>x</sup></small></string>
    <string name="exponential_const_btn_text">e</string>
    <string name="inverse_sin_btn_text">sin<small><sup>-1</sup></small></string>
    <string name="inverse_cos_btn_text">cos<small><sup>-1</sup></small></string>
    <string name="inverse_tan_btn_text">tan<small><sup>-1</sup></small></string>
    <string name="mode_btn_toggle_rad">Rad</string>
    <string name="mode_btn_toggle_deg">Deg</string>

</resources>