<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/darkGray"
    tools:context=".ScientificCalculatorFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sin_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_btn_text" />

        <Button
            android:id="@+id/cos_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cos_btn_text" />

        <Button
            android:id="@+id/tan_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tan_btn_text" />

        <Button
            android:id="@+id/log_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_btn_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sinh_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sinh_btn_text" />

        <Button
            android:id="@+id/cosh_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cosh_btn_text" />

        <Button
            android:id="@+id/tanh_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanh_btn_text" />

        <Button
            android:id="@+id/pi_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pie_btn_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/square_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square_btn_text" />

        <Button
            android:id="@+id/cube_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cube_btn_text" />

        <Button
            android:id="@+id/exponential_to_power_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exponential_to_power_btn_text" />

        <Button
            android:id="@+id/ten_to_power_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_to_power_btn_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/inverse_of_one_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inverse_of_one_btn_text" />

        <Button
            android:id="@+id/square_root_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square_root_btn_text" />

        <Button
            android:id="@+id/cube_root_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cube_root_btn_text" />

        <Button
            android:id="@+id/nth_root_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nth_root_btn_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/permutation_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permutation_btn_text" />

        <Button
            android:id="@+id/exponential_const_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exponential_const_btn_text" />

        <Button
            android:id="@+id/rand_num_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rand_num_btn_text" />

        <Button
            android:id="@+id/two_to_power_btn"
            android:theme="@style/BorderLessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_to_power_btn_text" />
    </LinearLayout>


</LinearLayout>